---
source: src/tests/icfg/naive/convert.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (0) at (4, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (1) at (4, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (2) at (4, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (3) at (3, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (4) at (3, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (5) at (3, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (6) at (2, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (7) at (2, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (8) at (2, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (9) at (1, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (10) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (11) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (12) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (13) at (0, 2) { };
\node[font=\tiny] at (-1.5, 0.5) {Assign(1, -1)};
\node[font=\tiny] at (-1.5, 1.5) {Assign(-2, 1)};
		\path[->] (0) edge (1);
		\path[->] (0) edge (9);
		\path[->] (1) edge (2);
		\path[->] (3) edge (4);
		\path[->] (6) edge (7);
		\path[->] (7) edge (8);
		\path[->] (9) edge (5);
		\path[->] (9) edge (10);
		\path[->] (11) edge (12);
		\path[->] (12) edge (13);


                \end{tikzpicture}
            \end{document}
